Finished game, fixed some errors